@@ -102,6 +102,10 @@ public:
     bool MoveCurrentUp();
     bool MoveCurrentDown();
 
+
+    // Override this to keep our m_order array in sync with the real item state.
+    virtual void Check(unsigned int item, bool check = true);
+
 private:
     // swap two items at the given positions in the listbox
     void Swap(int pos1, int pos2);
